# Academic-groups

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20231105192220_init.up.sql  20231106205000_academic-student-pairs.up.sql
src/: handler.rs  main.rs  model.rs  response.rs
static/: login.html  signin.html  signup.html  style.css
