[package]
name = "Academic-groups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
diesel = "2.1.3"
actix-files = "0.6.2"
actix-cors = "0.6.4"
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
dotenv = "0.15.0"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
jsonwebtoken = "9.1.0"
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
